@@ -1,6 +1,12 @@
 2018-12-23  Martin Sebor  <msebor@redhat.com>
 	    Jeff Law  <law@redhat.com>
 
+	* builtins.h (c_strlen_data): Add new fields and comments.
+	* builtins.c (unterminated_array): Change field reference from
+	"len" to "minlen" in c_strlen_data instance.
+	* gimple-fold.c (get_range_strlen): Likewise.
+	* gimple-ssa-sprintf.c (get_string_length): Likewise.
+
 	* builtins.c (unterminated_array): Rename "data" to "lendata".  Fix
 	a few comments.
 	(expand_builtin_strnlen, expand_builtin_stpcpy_1): Likewise.
